--- a/apps/Android/MnnLlmChat/app/src/main/res/drawable/bottom_sheet_background.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/drawable/bottom_sheet_background.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/color_background" />
+    <solid android:color="?colorSurface" />
     <corners
         android:topLeftRadius="16dp"
         android:topRightRadius="16dp" />
