--- a/apps/Android/MnnLlmChat/app/src/main/res/layout/recycle_item_market.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/layout/recycle_item_market.xml
@@ -1,117 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="80dp"
-    android:orientation="horizontal"
-    android:background="?attr/selectableItemBackground"
+    android:paddingTop="12dp"
+    android:paddingBottom="12dp"
+    android:background="@drawable/list_item_background_combined"
     >
-    <RelativeLayout
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="60dp"
-        android:layout_gravity="center_vertical"
-        >
-        <com.alibaba.mnnllm.android.widgets.ModelAvatarView
-            android:id="@+id/header_section_title"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_marginStart="12dp"
-            android:layout_centerVertical="true"
-            style="@style/Widget.Material3.CardView.Outlined"
-            app:cardBackgroundColor="@android:color/transparent"
-            app:cardCornerRadius="8dp"
-            app:strokeWidth="0.5dp"
-            app:strokeColor="?colorOutlineVariant" />
+    <com.alibaba.mnnllm.android.widgets.ModelAvatarView
+        android:id="@+id/header_section_title"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="4dp"
+        style="@style/Widget.Material3.CardView.Outlined"
+        app:cardBackgroundColor="@android:color/transparent"
+        app:cardCornerRadius="8dp"
+        app:strokeWidth="0.5dp"
+        app:strokeColor="?colorOutlineVariant" />
 
-        <TextView
-            android:id="@+id/tvModelTitle"
-            style="?textAppearanceTitleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="14dp"
-            android:layout_toEndOf="@id/header_section_title"
-            android:maxLines="1"
-            android:textSize="15sp"
-            android:textColor="?colorOnSurface"
-            tools:text="Qwen-Chat-7B" />
+    <TextView
+        android:id="@+id/tvModelTitle"
+        style="?textAppearanceTitleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="14dp"
+        android:layout_toEndOf="@id/header_section_title"
+        android:maxLines="1"
+        android:textColor="?colorOnSurface"
+        tools:text="Qwen-Chat-7B" />
 
-        <com.alibaba.mnnllm.android.widgets.TagsLayout
-            android:id="@+id/tagsLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minHeight="16dp"
-            android:layout_below="@id/tvModelTitle"
-            android:layout_marginStart="14dp"
-            android:layout_toEndOf="@id/header_section_title" />
+    <com.alibaba.mnnllm.android.widgets.TagsLayout
+        android:id="@+id/tagsLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:minHeight="16dp"
+        android:layout_below="@id/tvModelTitle"
+        android:layout_marginStart="14dp"
+        android:layout_toEndOf="@id/header_section_title" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_alignStart="@id/tagsLayout"
-            android:layout_below="@id/tagsLayout"
-            android:orientation="horizontal">
-            <ImageView
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                android:layout_gravity="center_vertical"
-                app:srcCompat="@drawable/ic_u_folder"
-                android:layout_marginEnd="4dp"
-                />
-            <TextView
-                android:id="@+id/tvStatus"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:layout_gravity="center_vertical"
-                android:textColor="?colorOnSurfaceVariant"
-                android:textSize="12sp"
-                android:visibility="visible"
-                tools:text="2.4G"/>
-        </LinearLayout>
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_download_action"
-            android:layout_width="60dp"
-            android:layout_height="32dp"
-            style="@style/Widget.Material3.Button.OutlinedButton"
-            android:layout_marginEnd="16dp"
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_alignStart="@id/tagsLayout"
+        android:layout_below="@id/tagsLayout"
+        android:orientation="horizontal">
+        <ImageView
+            android:layout_width="15dp"
+            android:layout_height="15dp"
             android:layout_gravity="center_vertical"
-            android:text="@string/download"
+            app:srcCompat="@drawable/ic_u_folder"
+            android:layout_marginEnd="4dp"
+            />
+        <TextView
+            android:id="@+id/tvStatus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:layout_gravity="center_vertical"
+            android:textColor="?colorOnSurfaceVariant"
             android:textSize="12sp"
-            android:insetLeft="0dp"
-            android:insetRight="0dp"
-            android:minWidth="0dp"
-            android:minHeight="0dp"
-            tools:text="set as default"
-            android:padding="0dp"
-            tools:visibility="gone"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@id/tvModelTitle"
-            />
-        
-        <com.google.android.material.checkbox.MaterialCheckBox
-            android:id="@+id/checkbox_voice_model"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginEnd="16dp"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@id/tvModelTitle"
-            android:layout_centerVertical="true"
-            android:padding="0dp"
-            android:visibility="gone"
-            tools:visibility="visible"
-            android:textColor="?colorOnSurface"
-            android:button="@drawable/checkbox_round"
-            android:background="@null"
-            app:buttonTint="@null"
-            android:checked="true"
-            app:useMaterialThemeColors="false"
-            />
-    </RelativeLayout>
+            android:visibility="visible"
+            tools:text="2.4G"/>
+    </LinearLayout>
 
-</LinearLayout>
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_download_action"
+        android:layout_width="60dp"
+        android:layout_height="32dp"
+        style="@style/Widget.Material3.Button.OutlinedButton"
+        android:layout_marginEnd="16dp"
+        android:layout_gravity="center_vertical"
+        android:text="@string/download"
+        android:textSize="12sp"
+        android:insetLeft="0dp"
+        android:insetRight="0dp"
+        android:minWidth="0dp"
+        android:minHeight="0dp"
+        tools:text="set as default"
+        android:padding="0dp"
+        tools:visibility="gone"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@id/tvModelTitle"
+        />
+
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/checkbox_voice_model"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="16dp"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@id/tvModelTitle"
+        android:layout_centerVertical="true"
+        android:padding="0dp"
+        android:visibility="gone"
+        tools:visibility="visible"
+        android:textColor="?colorOnSurface"
+        android:button="@drawable/checkbox_round"
+        android:background="@null"
+        app:buttonTint="@null"
+        android:checked="true"
+        app:useMaterialThemeColors="false"
+        />
+</RelativeLayout>
