--- a/apps/Android/MnnLlmChat/app/src/main/res/layout/layout_toolbar_filters_content.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/layout/layout_toolbar_filters_content.xml
@@ -9,7 +9,9 @@
         android:layout_height="match_parent"
         android:scrollbars="none"
         android:fillViewport="true"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:paddingEnd="16dp"
+        android:clipToPadding="false" >
         <LinearLayout
         android:id="@+id/filter_buttons_layout"
         android:layout_width="wrap_content"
@@ -19,13 +21,12 @@
         android:orientation="horizontal"
         android:gravity="center_vertical">
 
-        <TextView
-            android:id="@+id/filter_source"
-            style="@style/FilterChipStyle"
-            android:text="Source"
-            app:drawableEndCompat="@drawable/ic_arrow_drop_down"
-            app:drawableTint="@color/filter_button_tint"
-            android:textColor="@color/filter_button_tint"/>
+        <com.alibaba.mnnllm.android.widgets.ModelSwitcherView
+            android:id="@+id/source_switcher"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:visibility="gone"/>
         <!-- Quick filter tags will be added dynamically here -->
         <LinearLayout
             android:id="@+id/quick_filter_tags_layout"
@@ -51,28 +52,28 @@
             android:visibility="gone"
             android:textColor="@color/filter_button_tint"/>
 
-        <TextView
-            android:id="@+id/filter_vendor"
-            style="@style/FilterChipStyle"
-            android:text="@string/vendor_menu_title"
-            app:drawableEndCompat="@drawable/ic_arrow_drop_down"
-            android:visibility="gone"
-            app:drawableTint="@color/filter_button_tint"
-            android:textColor="@color/filter_button_tint"/>
+            <TextView
+                android:id="@+id/filter_vendor"
+                style="@style/FilterChipStyle"
+                android:text="@string/vendor_menu_title"
+                android:textColor="@color/filter_button_tint"
+                android:visibility="gone"
+                app:drawableEndCompat="@drawable/ic_arrow_drop_down"
+                app:drawableTint="@color/filter_button_tint" />
 
 
-    </LinearLayout>
+        </LinearLayout>
     </HorizontalScrollView>
     <View
-        android:layout_width="0.65dp"
+        android:layout_width="0.5dp"
         android:layout_height="match_parent"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        android:background="@color/color_foreground"
-        android:alpha="0.05"/>
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="?colorSurfaceVariant"
+        android:alpha="1"/>
     <LinearLayout
         android:id="@+id/filter_button_layout"
-        android:layout_width="60dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:orientation="horizontal"
@@ -84,12 +85,12 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/filter"
+            android:text="@string/all_filter"
             android:textColor="@color/filter_button_tint"
             />
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
             android:src="@drawable/ic_filter"
             android:layout_marginStart="4dp"
             android:contentDescription="@string/filter"
