--- a/apps/Android/MnnLlmChat/app/src/main/res/drawable/shape_tag_view_white.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/drawable/shape_tag_view_white.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
-<!--    <solid android:color="?attr/colorPrimaryContainer" />-->
+    <solid android:color="#ffffff" />
     <stroke
         android:width="0.5dp"
-        android:color="@color/label_color" />
+        android:color="?colorPrimary" />
     <corners android:radius="500dp" />
     <padding
-        android:left="4dp"
-        android:right="4dp"
+        android:left="8dp"
+        android:right="8dp"
         android:top="0dp"
         android:bottom="0dp" />
 </shape>
