--- a/apps/Android/MnnLlmChat/app/src/main/res/layout/fragment_benchmark.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/layout/fragment_benchmark.xml
@@ -11,27 +11,30 @@
     <!-- Model Selector with enhanced style -->
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/model_selector_card"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:background="@drawable/list_item_background_combined"
-        android:clickable="true"
         style="@style/Widget.Material3.CardView.Outlined"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/list_item_background_combined"
+
+        android:clickable="true"
         android:focusable="true">
-        
+
         <RelativeLayout
             android:id="@+id/model_selector_layout"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:layout_gravity="center_vertical">
-            
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:paddingTop="12dp"
+            android:paddingBottom="12dp">
+
             <com.alibaba.mnnllm.android.widgets.ModelAvatarView
                 android:id="@+id/model_avatar"
+                style="@style/Widget.Material3.CardView.Outlined"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="12dp"
                 android:layout_marginEnd="10dp"
-                style="@style/Widget.Material3.CardView.Outlined"
                 app:cardBackgroundColor="@android:color/transparent"
                 app:cardCornerRadius="8dp"
                 app:strokeColor="?colorOutlineVariant" />
@@ -44,45 +47,61 @@
                 android:layout_alignTop="@+id/model_avatar"
                 android:layout_toEndOf="@id/model_avatar"
                 android:maxLines="1"
-                android:textColor="?colorOnSurface"
                 android:text="Select Model"
+                android:textColor="?colorOnSurface"
                 tools:text="Qwen2.5-3B-Instruct" />
 
             <com.alibaba.mnnllm.android.widgets.TagsLayout
                 android:id="@+id/model_tags_layout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:minHeight="24dp"
                 android:layout_below="@id/model_selector_title"
                 android:layout_marginEnd="60dp"
-                android:layout_toEndOf="@id/model_avatar" />
+                android:layout_toEndOf="@id/model_avatar"
+                android:minHeight="24dp" />
 
             <ImageView
                 android:id="@+id/model_folder_icon"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:layout_marginEnd="4dp"
                 android:layout_below="@id/model_tags_layout"
+                android:layout_marginEnd="4dp"
+                android:layout_toEndOf="@id/model_avatar"
                 android:src="@drawable/ic_u_folder"
-                app:tint="?colorOnSurfaceVariant"
-                android:layout_toEndOf="@id/model_avatar" />
-            
+                app:tint="?colorOnSurfaceVariant" />
+
             <TextView
                 android:id="@+id/model_selector_status"
                 style="?textAppearanceBodySmall"
-                android:layout_marginTop="2dp"
-                android:layout_alignBaseline="@id/model_folder_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/model_tags_layout"
+                android:layout_alignBaseline="@id/model_folder_icon"
+                android:layout_marginTop="2dp"
                 android:layout_toEndOf="@id/model_folder_icon"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:textColor="?colorOnSurfaceVariant"
                 android:text="Click to select model"
+                android:textColor="?colorOnSurfaceVariant"
                 tools:text="4.5GB" />
 
-            <!-- Hidden AutoCompleteTextView for functionality -->
+            <TextView
+                android:id="@+id/model_time_info"
+                style="?textAppearanceBodySmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@id/model_selector_status"
+                android:layout_alignParentEnd="true"
+                android:layout_marginStart="14dp"
+                android:layout_marginTop="2dp"
+                android:layout_marginEnd="16dp"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:textColor="?colorOnSurfaceVariant"
+                android:textSize="12sp"
+                android:visibility="visible"
+                tools:text="Last chat: 2024-01-15 10:30" />
+
             <AutoCompleteTextView
                 android:id="@+id/model_selector_autocomplete"
                 android:layout_width="0dp"
@@ -100,9 +119,9 @@
                 android:layout_marginEnd="16dp"
                 android:src="@drawable/baseline_arrow_drop_down_24"
                 app:tint="?colorOnSurfaceVariant" />
-
         </RelativeLayout>
     </com.google.android.material.card.MaterialCardView>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -110,9 +129,9 @@
         <LinearLayout
             android:id="@+id/result_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:visibility="visible"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            tools:visibility="visible">
 
             <TextView
                 android:id="@+id/testResultsTitle"
@@ -123,8 +142,8 @@
                 android:textColor="?colorOnSurface"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                android:visibility="gone"
-                tools:visibility="visible"/>
+                android:visibility="invisible"
+                tools:visibility="visible" />
 
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/result_card"
@@ -136,7 +155,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/testResultsTitle"
-                tools:visibility="visible">
+                tools:visibility="invisible">
+
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -334,20 +354,21 @@
                                 app:layout_constraintTop_toTopOf="@id/max_memory_label"
                                 tools:text="9,62 GB" />
 
-<!--                            <ProgressBar-->
-<!--                                android:id="@+id/memory_progress"-->
-<!--                                style="?android:attr/progressBarStyleHorizontal"-->
-<!--                                android:layout_width="0dp"-->
-<!--                                android:layout_height="8dp"-->
-<!--                                android:layout_marginTop="16dp"-->
-<!--                                android:progress="80"-->
-<!--                                android:progressDrawable="@drawable/progress_m2_style"-->
-<!--                                app:layout_constraintEnd_toEndOf="parent"-->
-<!--                                app:layout_constraintStart_toStartOf="parent"-->
-<!--                                app:layout_constraintTop_toBottomOf="@id/peak_memory_label" />-->
+                            <!--                            <ProgressBar-->
+                            <!--                                android:id="@+id/memory_progress"-->
+                            <!--                                style="?android:attr/progressBarStyleHorizontal"-->
+                            <!--                                android:layout_width="0dp"-->
+                            <!--                                android:layout_height="8dp"-->
+                            <!--                                android:layout_marginTop="16dp"-->
+                            <!--                                android:progress="80"-->
+                            <!--                                android:progressDrawable="@drawable/progress_m2_style"-->
+                            <!--                                app:layout_constraintEnd_toEndOf="parent"-->
+                            <!--                                app:layout_constraintStart_toStartOf="parent"-->
+                            <!--                                app:layout_constraintTop_toBottomOf="@id/peak_memory_label" />-->
 
                         </androidx.constraintlayout.widget.ConstraintLayout>
                     </com.google.android.material.card.MaterialCardView>
+
                     <TextView
                         android:id="@+id/timestamp"
                         android:layout_width="match_parent"
@@ -362,98 +383,92 @@
 
             </com.google.android.material.card.MaterialCardView>
         </LinearLayout>
+
         <FrameLayout
             android:id="@+id/icon_benchmark_parent"
             android:layout_width="280dp"
             android:layout_height="280dp"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="100dp"
-            tools:visibility="gone"
-            >
-        <ImageView
-            android:id="@+id/icon_benchmark"
-            android:layout_width="180dp"
-            android:layout_height="180dp"
-            android:layout_gravity="center"
-            app:srcCompat="@drawable/icon_benchmark"
-            tools:visibility="visible"
-            />
+            tools:visibility="gone">
+
+            <ImageView
+                android:id="@+id/icon_benchmark"
+                android:layout_width="180dp"
+                android:layout_height="180dp"
+                android:layout_gravity="center"
+                app:srcCompat="@drawable/icon_benchmark"
+                tools:visibility="visible" />
+
             <ProgressBar
                 android:id="@+id/benchmark_progress_bar"
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:max="100"
+                android:progressDrawable="@drawable/custom_circular_progress"
                 tools:progress="99"
-                tools:visibility="gone"
-                android:progressDrawable="@drawable/custom_circular_progress" />
+                tools:visibility="invisible" />
         </FrameLayout>
 
-        <com.github.ybq.android.spinkit.SpinKitView
-            android:id="@+id/progressBar"
-            android:visibility="invisible"
-            android:layout_centerInParent="true"
-            style="@style/SpinKitView.Small.FadingCircle"
-            android:layout_marginTop="10dp"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            app:SpinKit_Color="?colorOnSurface"
-            tools:visibility="visible"/>
-
     </RelativeLayout>
+
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/textStatus"
+        style="?textAppearanceBodyLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        style="?textAppearanceBodyLarge"
-        android:textSize="20sp"
-        android:text="@string/select_a_model_to_start"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="30dp"
+        android:gravity="center"
+        android:text="@string/select_a_model_to_start"
+        android:textSize="20sp"
         android:visibility="visible"
-        tools:visibility="visible"
-        android:layout_gravity="center_horizontal"/>
+        tools:visibility="visible" />
     <!-- Button layout container -->
     <LinearLayout
         android:id="@+id/button_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:orientation="horizontal"
-        android:gravity="center">
-        
+        android:gravity="center"
+        android:orientation="horizontal">
+
         <!-- Back button (only visible in result state) -->
         <com.google.android.material.button.MaterialButton
             android:id="@+id/back_button"
+            style="@style/Widget.Material3.Button.OutlinedButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_marginEnd="8dp"
+            android:layout_weight="1"
             android:paddingTop="12dp"
             android:paddingBottom="12dp"
             android:text="@string/back"
             android:textAllCaps="false"
+            android:textColor="?colorOnSurface"
             android:textSize="16sp"
             android:visibility="gone"
             app:cornerRadius="24dp"
-            style="@style/Widget.Material3.Button.OutlinedButton" />
-        
+            tools:visibility="gone" />
+
         <!-- Main test button -->
         <com.google.android.material.button.MaterialButton
             android:id="@+id/start_test_button"
-            android:layout_width="match_parent"
+            style="@style/Widget.Material3.Button"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:paddingTop="12dp"
             android:paddingBottom="12dp"
             android:text="@string/start_test"
             android:textAllCaps="false"
             android:textSize="16sp"
             app:cornerRadius="24dp"
-            style="@style/Widget.Material3.Button.OutlinedButton"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
-        
+
     </LinearLayout>
 
 </LinearLayout>
