--- a/apps/Android/MnnLlmChat/app/src/main/res/color/chip_background_color_selector.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/color/chip_background_color_selector.xml
@@ -1,4 +1,4 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:color="?colorPrimaryContainer" android:state_checked="true"/>
-    <item android:color="?colorSurfaceVariant"/>
+    <item android:color="@color/chip_background"/>
 </selector>
