--- a/apps/Android/MnnLlmChat/app/src/main/res/values-night/colors.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/values-night/colors.xml
@@ -44,4 +44,6 @@
     <color name="benchmark_result_text_primary">#FFFFFF</color>
     <color name="benchmark_result_text_secondary">#B3B3B3</color>
 
+    <color name="chip_background">#2c2c2e</color>
+
 </resources>
