--- a/apps/Android/MnnLlmChat/app/src/main/res/layout/fragment_model_market.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/layout/fragment_model_market.xml
@@ -11,6 +11,8 @@
         android:id="@+id/model_market_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:paddingBottom="8dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
