--- a/apps/Android/MnnLlmChat/app/src/main/res/values/ip_colors.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/values/ip_colors.xml
@@ -1,5 +1,5 @@
 <resources>
-    <color name="md_theme_primary">#2f80ed</color>
+    <color name="md_theme_primary">#2E65C2</color>
     <color name="md_theme_onPrimary">#FFFFFF</color>
     <color name="md_theme_primaryContainer">#e8f0fe</color>
     <color name="md_theme_onPrimaryContainer">#2f4578</color>
