--- a/apps/Android/MnnLlmChat/app/src/main/res/layout/fragment_historylist.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/layout/fragment_historylist.xml
@@ -24,7 +24,9 @@
         android:layout_height="match_parent"
         android:layout_below="@id/history_title"
         android:visibility="visible"
-        android:overScrollMode="never" />
+        android:overScrollMode="never"
+        android:clipToPadding="false"
+        android:paddingBottom="8dp" />
     <TextView
         android:id="@+id/text_no_history"
         android:layout_width="wrap_content"
