toolbar color changed

--- a/apps/Android/MnnTaoAvatar/app/src/main/res/layout/activity_main_settings.xml
+++ b/apps/Android/MnnTaoAvatar/app/src/main/res/layout/activity_main_settings.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:elevation="4dp"
-        />
+        android:background="@color/colorAccent"/>
 
     <FrameLayout
         android:layout_width="match_parent"
