--- a/apps/Android/MnnLlmChat/app/src/main/res/layout/dialog_fragment_filter.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/layout/dialog_fragment_filter.xml
@@ -76,6 +76,21 @@
         android:layout_height="wrap_content"
         app:chipSpacing="8dp" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/download_state"
+        style="@style/TextFilterGroup"
+        />
+
+    <com.google.android.material.chip.ChipGroup
+        android:id="@+id/download_state_chip_group"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:chipSpacing="8dp"
+        app:singleSelection="true" />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
