--- a/apps/Android/MnnLlmChat/app/src/main/res/layout/layout_toolbar_filters_content.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/layout/layout_toolbar_filters_content.xml
@@ -85,7 +85,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/all_filter"
+            android:text="@string/filter_all"
             android:textColor="@color/filter_button_tint"
             />
         <ImageView
