--- a/apps/Android/MnnLlmChat/app/src/main/res/layout/activity_debug_animation.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/layout/activity_debug_animation.xml
@@ -69,7 +69,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="全部筛选"
+                android:text="@string/filter_all"
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 android:textStyle="bold"
@@ -106,6 +106,46 @@
                 <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="1B"/>
                 <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="3B"/>
                 <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="7B"/>
+            </RadioGroup>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="@string/filter_section_download_status"
+                android:textStyle="bold"/>
+            <RadioGroup
+                android:id="@+id/radio_group_download_status"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="8dp">
+                <RadioButton
+                    android:id="@+id/radio_download_all"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/filter_all_option"
+                    android:checked="true"/>
+                <RadioButton
+                    android:id="@+id/radio_download_not_started"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/filter_download_not_started"/>
+                <RadioButton
+                    android:id="@+id/radio_download_downloading"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/filter_download_downloading"/>
+                <RadioButton
+                    android:id="@+id/radio_download_paused"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/filter_download_paused"/>
+                <RadioButton
+                    android:id="@+id/radio_download_completed"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/filter_download_completed"/>
             </RadioGroup>
 
             <LinearLayout
